🚀 feat: Adiciona código HTML inicial
Adiciona os arquivos HTML com a estrutura básica do projeto.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
-    <main></main>
+    <main>
+        <div class="card">
+            <img class="card-photo" src="./src/img/image-victor.jpg" alt="Foto do Perfil">
+            <p>Victor Creat <span>26</span></p>
+            <p>London</p>
+            <hr>
+            <ul>
+                <li>80K</li>
+                <li>803K</li>
+                <li>1.4K</li>
+            </ul>
+            <ul>
+                <li>Followers</li>
+                <li>Likes</li>
+                <li>Photos</li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
