✨ feat: Adiciona arquivo README.md ao projeto

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             alt="Foto do Perfil"
           />
           <p>Victor Crest <span>26</span></p>
-          <p class="country">London</p>
+          <p class="city">London</p>
         </div>
 
         <hr />
